--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dnao6nouz/image/upload/v1757955745/dos_ositos_%EF%B8%8F_1_vgm0hr.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tarjeta de Invitación Digital | Revelación Genero</title>
     <meta name="author" content="ACeleste" />
